# ani-rust

./: Cargo.toml
examples/: get_episodes.rs  search.rs
src/: anime.rs  lib.rs  search.rs
